WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120287
[GTK] webkitCredentialGetCredential returns a temporary in g_return_val_if_fail
https://bugs.webkit.org/show_bug.cgi?id=120287
Summary
[GTK] webkitCredentialGetCredential returns a temporary in g_return_val_if_fail
Carlos Garcia Campos
Reported
2013-08-26 00:40:12 PDT
webkitCredentialGetCredential() is private function so we shouldn't use g_return macros, but asserts.
Attachments
Patch
(1.27 KB, patch)
2013-08-26 00:41 PDT
,
Carlos Garcia Campos
pnormand
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2013-08-26 00:41:58 PDT
Created
attachment 209621
[details]
Patch
WebKit Commit Bot
Comment 2
2013-08-26 00:43:14 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2013-08-26 00:46:59 PDT
Committed
r154589
: <
http://trac.webkit.org/changeset/154589
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug