[GTK] webkitCredentialGetCredential returns a temporary in g_return_val_if_fail https://bugs.webkit.org/show_bug.cgi?id=120287

Reviewed by Philippe Normand.

* UIProcess/API/gtk/WebKitCredential.cpp:
(webkitCredentialGetCredential): Use ASSERT() instead of
g_return_val_if_fail() since this is a private function.

Canonical link: https://commits.webkit.org/138243@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154589 268f45cc-cd09-0410-ab3c-d52691b4dbfc